--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<%= render "devise/shared/second-header"%>
+<%= render "shared/second-header"%>
 
 <%# 「モデル名」にはUserモデルであれば@userを渡しましょう。「新規登録機能へのパス」は、devise導入後にrails routesを実行してdevise/registrations#createへのパスを確認し、記載してください。 %>
 <%= form_with model: @user, url: user_registration_path, method: :post, class: 'registration-main', local: true do |f| %>
@@ -104,4 +104,4 @@
 </div>
 <% end %>
 
-<%= render "devise/shared/second-footer"%>
+<%= render "shared/second-footer"%>
