--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -22,7 +22,8 @@
         <%= f.file_field :hoge, id:"item-image" %>
       </div>
     </div>
-    <%#= image_tag item.image, class: '#' if item.image.attached? %><%# /商品画像 %>
+    <%#= image_tag item.image, class: '#' if item.image.attached? %>
+    <%# /商品画像 %>
     <%# 商品名と商品説明 %>
     <div class="new-items">
       <div class="weight-bold-text">
