--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -19,10 +19,9 @@
         <p>
           クリックしてファイルをアップロード
         </p>
-        <%= f.file_field :hoge, id:"item-image" %>
+        <%= f.file_field :image, id:"item-image" %>
       </div>
     </div>
-    <%#= image_tag item.image, class: '#' if item.image.attached? %>
     <%# /商品画像 %>
     <%# 商品名と商品説明 %>
     <div class="new-items">
