--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -131,11 +131,11 @@
        <li class='list'>
          <div class='item-img-content'>
            <%= link_to image_tag(item.image, class: "item-img"), item_path(item.id)%>
-           <%# 商品が売れていればsold outを表示しましょう %>
+           <% if item.buyer.present? %>
            <div class='sold-out'>
              <span>Sold Out!!</span>
            </div>
-           <%# //商品が売れていればsold outを表示しましょう %>
+           <% end %>
          </div>
          <div class='item-info'>
            <h3 class='item-name'>
