--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -129,8 +129,9 @@
     <ul class='item-lists'>
      <% @item.each do |item| %>
        <li class='list'>
+        <%= link_to item_path(item.id), method: :get do %>
          <div class='item-img-content'>
-           <%= link_to image_tag(item.image, class: "item-img"), item_path(item.id)%>
+           <%= image_tag(item.image, class: "item-img") %>
            <% if item.buyer.present? %>
            <div class='sold-out'>
              <span>Sold Out!!</span>
@@ -149,6 +150,7 @@
              </div>
            </div>
          </div>
+        <% end %>
        </li>
      <% end %>
 
