--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -7,8 +7,8 @@
     今すぐ無料ダウンロード！
   </h2>
   <div class='store-btn'>
-    <%= link_to image_tag("app-store.svg", class:"apple-btn"), "#" %>
-    <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
+    <%= link_to image_tag("instagramlogo.png", class:"apple-btn"), "#" %>
+    <%= link_to image_tag("facebooklogo.png", class:"google-btn"), "#" %>
   </div>
 </div>
 <%# /下部広告部分 %>
@@ -16,26 +16,26 @@
 <div class='footer'>
   <div class='footer-contents'>
     <div class='furima-details'>
-      <h2 class='footer-content-head'>FURIMAについて</h2>
+      <h2 class='footer-content-head'>"にわやまふぁーむ"について</h2>
       <ul>
-        <li><%= link_to '会社概要（運営会社)', "#", class: "footer-link" %></li>
+        <li><%= link_to '農園概要', "#", class: "footer-link" %></li>
         <li><%= link_to 'プライバシーポリシー', "#", class: "footer-link" %></li>
-        <li><%= link_to 'FURIMA利用規約', "#", class: "footer-link" %></li>
-        <li><%= link_to 'ポイントに関する特約', "#", class: "footer-link" %></li>
+        <li><%= link_to 'にわやまふぁーむ利用規約', "#", class: "footer-link" %></li>
+        <li><%= link_to 'その他', "#", class: "footer-link" %></li>
       </ul>
     </div>
     <div class='furima-details'>
-      <h2 class='footer-content-head'>FURIMAを見る</h2>
+      <h2 class='footer-content-head'>"にわやまふぁーむ"を見る</h2>
       <ul>
         <li><%= link_to 'カテゴリー一覧', "#", class: "footer-link" %></li>
-        <li><%= link_to 'ブランド一覧', "#", class: "footer-link" %></li>
+        <li><%= link_to '商品一覧', "#", class: "footer-link" %></li>
       </ul>
     </div>
     <div class='furima-details'>
-      <h2 class='footer-content-head'>FURIMAについて</h2>
+      <h2 class='footer-content-head'>"にわやまふぁーむ"について</h2>
       <ul>
-        <li><%= link_to 'FURIMAガイド', "#", class: "footer-link" %></li>
-        <li><%= link_to 'FURIMAロゴ利用ガイドライン', "#", class: "footer-link" %></li>
+        <li><%= link_to 'にわやまふぁーむガイド', "#", class: "footer-link" %></li>
+        <li><%= link_to 'にわやまふぁーむロゴ利用ガイドライン', "#", class: "footer-link" %></li>
         <li><%= link_to 'お知らせ', "#", class: "footer-link" %></li>
       </ul>
     </div>
