--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,7 +1,7 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
+    <%= link_to image_tag("niwayamafarm.jpg", class:"furima-icon"), "/" %>
     <form class="search-form" action="#">
       <input class='input-box' placeholder='キーワードから探す'>
       <button class="search-button">
@@ -11,8 +11,8 @@
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
-      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
+      <li><%= link_to 'にわやまふぁーむ', "#", class: "category-list" %></li>
+      <li><%= link_to '購入する際の注意点', "#", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
       <% if user_signed_in? %>
@@ -20,7 +20,7 @@
        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %><li>
       <% else %>
        <li><%= link_to 'ログイン', new_user_session_path, method: :get, class: "login" %></li>
-       <li><%= link_to '新規登録', new_user_registration_path, method: :get, class: "sign-up" %></li>
+       <li><%= link_to '新規会員登録', new_user_registration_path, method: :get, class: "sign-up" %></li>
       <% end %>
     </ul>
   </div>
