トップページ編集（GitHub思い出すためのお試し）

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -4,7 +4,7 @@
   <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
   <div class='title-contents'>
     <h2 class='service-title'>
-      リンゴ農家にわちゃん
+      リンゴ農家
     </h2>
     <p class='service-explain'>
       信州安曇野で農業やってます
