--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -26,7 +26,7 @@
     </h2>
     <ul class='reason-lists'>
       <li class='list'>
-        <%= image_tag "kaobackangle.jpeg", class:"list-pict" %>
+        <%= image_tag '/assets/kaobackangle.jpeg', class:"list-pict" %>
         <span class='reason-list-number'>1</span>
         <h3 class='reason-list-text'>
           <span class='reason-list-blue-text'>一人</span>
